not done - icon commented out

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/kolamide_logo.jpg" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/jeolad-logo.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Gideon Idowu</title>
+    <title>Jesse Adesina</title>
   </head>
   <body>
     <div id="root"></div>
